--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -1,21 +1,20 @@
-name: API workflow
+name: Angular CI with Jest
 
 on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Test python API
+
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/setup-python@v2
+    - uses: actions/setup-node@v2
       with:
-        python-version: '3.10'
-    - name: Install requirements
-      run: pip install -r api/requirements.txt
-    - name: Run tests and collect coverage
-      run: pytest --cov=api.calculator --cov-report=xml
-    - name: Upload coverage reports to Codecov with GitHub Action
-      uses: codecov/codecov-action@v4.2.0
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        node-version: '14'  # Ensure this matches your development environment
+    - run: npm install
+    - run: npm run test
+    - uses: codecov/codecov-action@v4.2.0
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./coverage/lcov.info
+        fail_ci_if_error: true
