--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -1,20 +1,28 @@
-name: Angular CI with Jest
+name: Run tests and upload coverage
 
-on: [push, pull_request]
+on:
+  push
 
 jobs:
-  build:
+  test:
+    name: Run tests and collect coverage
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v2
-      with:
-        node-version: '14'  # Ensure this matches your development environment
-    - run: npm install
-    - run: npm run test
-    - uses: codecov/codecov-action@v4.2.0
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage/lcov.info
-        fail_ci_if_error: true
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npx jest --coverage
+
+      - name: Upload results to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
